kubernetes/catchtable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catchtable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catchtable
  template:
    metadata:
      labels:
        app: catchtable
    spec:
      containers:
        - name: catchtable
          image: teeinn/catchtable:latest
          ports:
            - containerPort: 8000



---
# apiVersion: v1
# kind: Service
# metadata:
#   name: catchtable
# spec:
#   type: LoadBalancer
#   selector:
#     app: catchtable
#   ports:
#     - port: 8000
#       targetPort: 8000
#       nodePort: 30000
#       protocol: TCP

apiVersion: v1
kind: Service
metadata:
  name: catchtable
spec:
  type: ClusterIP
  selector:
    app: catchtable
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
